# snaptrade-mcp-server

./: .gitignore  LICENSE  pyproject.toml
snaptrade_mcp/: README.md  __init__.py  __main__.py  requirements.txt  server.py
