[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snaptrade-mcp"
version = "0.1.0"
description = "Read-only MCP server for brokerage data via SnapTrade"
readme = "snaptrade_mcp/README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Micah Peterson", email = "micah63@gmail.com" },
]
keywords = ["mcp", "snaptrade", "brokerage", "finance", "ai-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "snaptrade-python-sdk>=11.0.0",
]

[project.scripts]
snaptrade-mcp = "snaptrade_mcp.server:main"

[project.urls]
Homepage = "https://github.com/micah63/snaptrade-mcp-server"
Repository = "https://github.com/micah63/snaptrade-mcp-server"
Issues = "https://github.com/micah63/snaptrade-mcp-server/issues"
